--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: postgres
     restart: always
     environment:
-      POSTGRES_USER: $user
-      POSTGRES_PASSWORD: $password
+      POSTGRES_USER: $dbuser
+      POSTGRES_PASSWORD: $dbpassword
     ports:
       - "5432:5432"
     volumes:
